# comist

./: .gitignore  Pipfile  README.md  app.py  pyproject.toml  requirements.txt  scrapy.cfg
ComicScrapy/: middlewares.py  pipelines.py  settings.py
ComicScrapy/spiders/: GetComics.py
cc_scrapy/: manual.md
cc_scrapy/ComicScrapy/: middlewares.py  pipelines.py  settings.py  site_data.py
cc_scrapy/ComicScrapy/spiders/: GetComics.py
data/: edit_symlink.py
data/vocabulary/step200/: bowkm
feature/: BOWtest.py  Untitled.ipynb  bowkm  clustering.py  feature_ext_test.ipynb  feature_extract.ipynb  feature_extract.py  pretrained.ipynb  train.py
frames/: comic_view.py  const.py  crawl.py  rating.py  view.py
preprocess/: clustering.py  train.py
scrapy/: manual.md
scrapy/ComicScrapy/: items.py
src/: Pipfile  comic_view.py  crawl.py  main_app.py  manual.md  view.py
src/ComicScrapy/: items.py  pipelines.py  settings.py  site_data.py
src/ComicScrapy/spiders/: GetComics.py
src/feature/: feature_ext_test.ipynb  feature_extract.py  test.csv
src/interface/: App.py  comic_view.py  view.py  view_sample.py  wx_turorial.py
src/preprocess/: clustering.py  feature_extract.py  retrieve.py  train.py
